crates/as2/src/parser/snapshots/ruasc_as2__parser__tests__all_samples@op_precedence__logic.as.snap
---
source: crates/as2/src/parser/tests.rs
expression: parsed
input_file: samples/op_precedence/logic.as
---
Ok:
  statements:
    - Declare:
        - name: a
          value:
            Constant:
              Identifier: "true"
    - Declare:
        - name: b
          value:
            Constant:
              Identifier: "false"
    - Declare:
        - name: c
          value:
            Constant:
              Identifier: "true"
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - BinaryOperator:
                    - Add
                    - BinaryOperator:
                        - Add
                        - BinaryOperator:
                            - Add
                            - BinaryOperator:
                                - Add
                                - Constant:
                                    String: a=
                                - Constant:
                                    Identifier: a
                            - Constant:
                                String: ", b="
                        - Constant:
                            Identifier: b
                    - Constant:
                        String: ", c="
                - Constant:
                    Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - Constant:
                String: "----"
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a && b = "
                - Parenthesis:
                    BinaryOperator:
                      - LogicalAnd
                      - Constant:
                          Identifier: a
                      - Constant:
                          Identifier: b
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "b && c = "
                - Parenthesis:
                    BinaryOperator:
                      - LogicalAnd
                      - Constant:
                          Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - Constant:
                String: "---"
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a || b = "
                - Parenthesis:
                    BinaryOperator:
                      - LogicalOr
                      - Constant:
                          Identifier: a
                      - Constant:
                          Identifier: b
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "b || c = "
                - Parenthesis:
                    BinaryOperator:
                      - LogicalOr
                      - Constant:
                          Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - Constant:
                String: "---"
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a && c && b = "
                - Parenthesis:
                    BinaryOperator:
                      - LogicalAnd
                      - BinaryOperator:
                          - LogicalAnd
                          - Constant:
                              Identifier: a
                          - Constant:
                              Identifier: c
                      - Constant:
                          Identifier: b
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "((a && c) && b) = "
                - Parenthesis:
                    BinaryOperator:
                      - LogicalAnd
                      - Parenthesis:
                          BinaryOperator:
                            - LogicalAnd
                            - Constant:
                                Identifier: a
                            - Constant:
                                Identifier: c
                      - Constant:
                          Identifier: b
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - Constant:
                String: "---"
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a || b || c = "
                - Parenthesis:
                    BinaryOperator:
                      - LogicalOr
                      - BinaryOperator:
                          - LogicalOr
                          - Constant:
                              Identifier: a
                          - Constant:
                              Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "((a || b) || c) = "
                - Parenthesis:
                    BinaryOperator:
                      - LogicalOr
                      - Parenthesis:
                          BinaryOperator:
                            - LogicalOr
                            - Constant:
                                Identifier: a
                            - Constant:
                                Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - Constant:
                String: "---"
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a || b && c = "
                - Parenthesis:
                    BinaryOperator:
                      - LogicalAnd
                      - BinaryOperator:
                          - LogicalOr
                          - Constant:
                              Identifier: a
                          - Constant:
                              Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "(a || (b && c)) = "
                - Parenthesis:
                    BinaryOperator:
                      - LogicalOr
                      - Constant:
                          Identifier: a
                      - Parenthesis:
                          BinaryOperator:
                            - LogicalAnd
                            - Constant:
                                Identifier: b
                            - Constant:
                                Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - Constant:
                String: "---"
    - Declare:
        - name: x
          value:
            Constant:
              Identifier: "false"
    - Declare:
        - name: y
          value:
            Constant:
              Identifier: "true"
    - Declare:
        - name: z
          value:
            Constant:
              Identifier: "false"
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "x && y || z = "
                - Parenthesis:
                    BinaryOperator:
                      - LogicalOr
                      - BinaryOperator:
                          - LogicalAnd
                          - Constant:
                              Identifier: x
                          - Constant:
                              Identifier: y
                      - Constant:
                          Identifier: z
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "((x && y) || z) = "
                - Parenthesis:
                    BinaryOperator:
                      - LogicalOr
                      - Parenthesis:
                          BinaryOperator:
                            - LogicalAnd
                            - Constant:
                                Identifier: x
                            - Constant:
                                Identifier: y
                      - Constant:
                          Identifier: z
