crates/as2/src/parser/snapshots/ruasc_as2__parser__tests__all_samples@op_precedence__mul_div_mod.as.snap
---
source: crates/as2/src/parser/tests.rs
expression: parsed
input_file: samples/op_precedence/mul_div_mod.as
---
Ok:
  statements:
    - Declare:
        - name: a
          value:
            Constant:
              Integer: 20
    - Declare:
        - name: b
          value:
            Constant:
              Integer: 6
    - Declare:
        - name: c
          value:
            Constant:
              Integer: 4
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - BinaryOperator:
                    - Add
                    - BinaryOperator:
                        - Add
                        - BinaryOperator:
                            - Add
                            - BinaryOperator:
                                - Add
                                - Constant:
                                    String: a=
                                - Constant:
                                    Identifier: a
                            - Constant:
                                String: ", b="
                        - Constant:
                            Identifier: b
                    - Constant:
                        String: ", c="
                - Constant:
                    Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - Constant:
                String: "----"
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a * b / c = "
                - Parenthesis:
                    BinaryOperator:
                      - Divide
                      - BinaryOperator:
                          - Multiply
                          - Constant:
                              Identifier: a
                          - Constant:
                              Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "(a * b) / c = "
                - Parenthesis:
                    BinaryOperator:
                      - Divide
                      - Parenthesis:
                          BinaryOperator:
                            - Multiply
                            - Constant:
                                Identifier: a
                            - Constant:
                                Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - Constant:
                String: "---"
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a / b * c = "
                - Parenthesis:
                    BinaryOperator:
                      - Multiply
                      - BinaryOperator:
                          - Divide
                          - Constant:
                              Identifier: a
                          - Constant:
                              Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "(a / b) * c = "
                - Parenthesis:
                    BinaryOperator:
                      - Multiply
                      - Parenthesis:
                          BinaryOperator:
                            - Divide
                            - Constant:
                                Identifier: a
                            - Constant:
                                Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - Constant:
                String: "---"
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a % b * c = "
                - Parenthesis:
                    BinaryOperator:
                      - Multiply
                      - BinaryOperator:
                          - Modulo
                          - Constant:
                              Identifier: a
                          - Constant:
                              Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "(a % b) * c = "
                - Parenthesis:
                    BinaryOperator:
                      - Multiply
                      - Parenthesis:
                          BinaryOperator:
                            - Modulo
                            - Constant:
                                Identifier: a
                            - Constant:
                                Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - Constant:
                String: "---"
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a * b % c = "
                - Parenthesis:
                    BinaryOperator:
                      - Modulo
                      - BinaryOperator:
                          - Multiply
                          - Constant:
                              Identifier: a
                          - Constant:
                              Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "(a * b) % c = "
                - Parenthesis:
                    BinaryOperator:
                      - Modulo
                      - Parenthesis:
                          BinaryOperator:
                            - Multiply
                            - Constant:
                                Identifier: a
                            - Constant:
                                Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - Constant:
                String: "---"
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a % b / c = "
                - Parenthesis:
                    BinaryOperator:
                      - Divide
                      - BinaryOperator:
                          - Modulo
                          - Constant:
                              Identifier: a
                          - Constant:
                              Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "(a % b) / c = "
                - Parenthesis:
                    BinaryOperator:
                      - Divide
                      - Parenthesis:
                          BinaryOperator:
                            - Modulo
                            - Constant:
                                Identifier: a
                            - Constant:
                                Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - Constant:
                String: "---"
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "a / b % c = "
                - Parenthesis:
                    BinaryOperator:
                      - Modulo
                      - BinaryOperator:
                          - Divide
                          - Constant:
                              Identifier: a
                          - Constant:
                              Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "(a / b) % c = "
                - Parenthesis:
                    BinaryOperator:
                      - Modulo
                      - Parenthesis:
                          BinaryOperator:
                            - Divide
                            - Constant:
                                Identifier: a
                            - Constant:
                                Identifier: b
                      - Constant:
                          Identifier: c
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - Constant:
                String: "---"
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "Nested: a * b / c * b = "
                - Parenthesis:
                    BinaryOperator:
                      - Multiply
                      - BinaryOperator:
                          - Divide
                          - BinaryOperator:
                              - Multiply
                              - Constant:
                                  Identifier: a
                              - Constant:
                                  Identifier: b
                          - Constant:
                              Identifier: c
                      - Constant:
                          Identifier: b
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "Nested reference: (((a * b) / c) * b) = "
                - Parenthesis:
                    BinaryOperator:
                      - Multiply
                      - Parenthesis:
                          BinaryOperator:
                            - Divide
                            - Parenthesis:
                                BinaryOperator:
                                  - Multiply
                                  - Constant:
                                      Identifier: a
                                  - Constant:
                                      Identifier: b
                            - Constant:
                                Identifier: c
                      - Constant:
                          Identifier: b
